skel_lownet/build/log/idf_py_stdout_output_20868
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\nizon\esp\assignment_02\skel_lownet\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/nizon/esp/assignment_02/skel_lownet/build/bootloader/bootloader.bin"
Bootloader binary size 0x6750 bytes. 0x8b0 bytes (8%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -IC:/Users/nizon/esp/assignment_02/skel_lownet/build/config -IC:/Users/nizon/esp/assignment_02/skel_lownet/main -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/nizon/esp/assignment_02/skel_lownet=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.4=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.4\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\app_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -c C:/Users/nizon/esp/assignment_02/skel_lownet/main/app_main.c
C:/Users/nizon/esp/assignment_02/skel_lownet/main/app_main.c: In function 'app_main':
C:/Users/nizon/esp/assignment_02/skel_lownet/main/app_main.c:55:33: error: too few arguments to function 'chat_tell'
   55 |                                 chat_tell(/* ...? */);
      |                                 ^~~~~~~~~
In file included from C:/Users/nizon/esp/assignment_02/skel_lownet/main/app_main.c:11:
C:/Users/nizon/esp/assignment_02/skel_lownet/main/app_chat.c:31:6: note: declared here
   31 | void chat_tell(const char* message, uint8_t destination) {
      |      ^~~~~~~~~
ninja: build stopped: subcommand failed.
